--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-w2rust"
+          prefix-key: "w2.rust"
+          shared-key: "w2.rust"
 
       - name: Build
         run: cargo build -r
@@ -47,7 +48,8 @@ jobs:
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: "v0-w2rust"
+          prefix-key: "w2.rust"
+          shared-key: "w2.rust"
 
       - name: Build
         run: cargo build -r
