Updated `cargo` information

--- a/apps/editors/Cargo.toml
+++ b/apps/editors/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "editors"
 version.workspace = true
-authors.workspace = true
 description.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
 documentation.workspace = true
+authors.workspace = true
 edition.workspace = true
 
 [dependencies]
