--- a/apps/server/Cargo.toml
+++ b/apps/server/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "server"
 version.workspace = true
-authors.workspace = true
 description.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
 documentation.workspace = true
+authors.workspace = true
 edition.workspace = true
 
 [dependencies]
 enc_dec = { path = "../../libs/enc_dec" }
 packets = { path = "../../libs/packets" }
-tokio = { version = "1.28.0", features = ["full"] }
+tokio = { version = "1.28.1", features = ["full"] }
