--- a/libs/enc_dec/Cargo.toml
+++ b/libs/enc_dec/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "enc_dec"
 version.workspace = true
-authors.workspace = true
 description.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
 documentation.workspace = true
+authors.workspace = true
 edition.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
