--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ members = [
 ]
 
 [workspace.package]
-version = "0.0.3"
-authors = ["Nelson Faiçal Rechdan"]
+version = "0.0.4"
 description = "W2.Rust is a set of tools and GameServer made using the Rust language."
+readme = "README.md"
+repository = "https://github.com/Rechdan/W2.Rust"
+license = "MIT"
 documentation = "https://github.com/Rechdan/W2.Rust"
+authors = ["Nelson Faiçal Rechdan"]
 edition = "2021"
