--- a/apps/sniffer/Cargo.toml
+++ b/apps/sniffer/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "sniffer"
 version.workspace = true
-authors.workspace = true
 description.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
 documentation.workspace = true
+authors.workspace = true
 edition.workspace = true
 
 [package.metadata.bundle]
@@ -16,4 +19,4 @@ eframe = "0.21.3"
 egui = "0.21.0"
 egui_extras = "0.21.0"
 once_cell = "1.17.1"
-tokio = { version = "1.28.0", features = ["full"] }
+tokio = { version = "1.28.1", features = ["full"] }
