--- a/libs/packets/Cargo.toml
+++ b/libs/packets/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "packets"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+description.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
+documentation.workspace = true
+authors.workspace = true
+edition.workspace = true
 
 [dependencies]
 encoding_rs = "0.8.32"
