--- a/apps/editors/Cargo.toml
+++ b/apps/editors/Cargo.toml
@@ -10,7 +10,8 @@ authors.workspace = true
 edition.workspace = true
 
 [dependencies]
-eframe = "0.21.3"
-egui = "0.21.0"
-egui_extras = "0.21.0"
-once_cell = "1.17.1"
+eframe = "0.24.1"
+egui = "0.24.1"
+egui_extras = "0.24.2"
+once_cell = "1.19.0"
+rfd = "0.12.1"
