--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,11 +30,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # - name: Install lib needed
-      #   run: sudo apt-get install -y librust-atk-dev
-
-      # - name: Prepare Rust
-      #   run: rustup toolchain install stable --profile minimal
+      - name: Install libs needed
+        run: sudo apt-get install -y libgtk-3-dev
 
       - name: Install minimal
         uses: actions-rs/toolchain@v1
