--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,11 +43,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # - name: Install lib needed
-      #   run: sudo apt-get install -y librust-atk-dev
+      - name: Install libs needed
+        run: sudo apt-get install -y libgtk-3-dev
 
-      - name: Prepare Rust
-        run: rustup toolchain install stable --profile minimal
+      - name: Install minimal
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          profile: minimal
 
       - name: Cache Rust
         uses: Swatinem/rust-cache@v2
