--- a/apps/editors/Cargo.toml
+++ b/apps/editors/Cargo.toml
@@ -13,5 +13,6 @@ edition.workspace = true
 eframe = "0.24.1"
 egui = "0.24.1"
 egui_extras = "0.24.2"
+fixedstr = { version = "0.5.4", features = ["serde"] }
 once_cell = "1.19.0"
 rfd = "0.12.1"
