Improvement on reading files and added initial server name editing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,6 @@
   "editor.detectIndentation": true,
   "editor.tabSize": 4,
   // rust-analyzer
-  "rust-analyzer.cargo.extraArgs": ["--target", "x86_64-pc-windows-gnu"]
-  // "rust-analyzer.inlayHints.chainingHints.enable": false,
-  // "rust-analyzer.inlayHints.closingBraceHints.enable": false,
-  // "rust-analyzer.inlayHints.parameterHints.enable": false,
-  // "rust-analyzer.inlayHints.renderColons": false,
-  // "rust-analyzer.inlayHints.typeHints.enable": false
+  "rust-analyzer.cargo.extraArgs": ["--target", "x86_64-pc-windows-gnu"],
+  "rust-analyzer.hover.memoryLayout.offset": "both"
 }
